# CAPD_example_standalone

./: .gitmodules  CMakeLists.txt  README.md  build.sh
analyze_obj_files/: script.py
src/: main.cpp  test.cpp  test.h
src/capdAlg/: CMakeLists.txt
src/capdAux/: CMakeLists.txt
src/capdDynSys/: CMakeLists.txt
